--- a/Regular Expression/Sample1.ipynb
+++ b/Regular Expression/Sample1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1ec6076d",
+   "id": "15d12978",
    "metadata": {},
    "source": [
     "### Question1: Write a regular expression to match email addresses."
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4dea3c9a",
+   "id": "39b08a8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1bef694a",
+   "id": "de969dd5",
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e9b614b",
+   "id": "84aac300",
    "metadata": {},
    "source": [
     "### Question2: Extracting Dates"
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7e150bef",
+   "id": "8d7c4f63",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b41df555",
+   "id": "e150ff13",
    "metadata": {},
    "source": [
     "### Question3: Extracting Hashtag"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5c9c9d00",
+   "id": "b7dcd776",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eda37fad",
+   "id": "2278715e",
    "metadata": {},
    "source": [
     "### Question4: Extracting URLs"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "68d96234",
+   "id": "79623000",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99acc9e9",
+   "id": "741e6f12",
    "metadata": {},
    "source": [
     "### Question5: Extracting Numbers"
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f749040a",
+   "id": "6d3a4004",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ec94010",
+   "id": "589fa409",
    "metadata": {},
    "source": [
     "### Question6: Extracting SSN"
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "af2aa706",
+   "id": "500c6735",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5844a4b6",
+   "id": "834a89ab",
    "metadata": {},
    "source": [
     "### Question7: Extracting Dollar Amounts"
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d5185ecc",
+   "id": "efdb7c56",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "106df3f0",
+   "id": "5277d0f5",
    "metadata": {},
    "source": [
     "### Question8: Extracting Mentioned persons"
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8f357739",
+   "id": "76e0cafe",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b5b2021",
+   "id": "3d922574",
    "metadata": {},
    "source": [
     "### Question9: Extracting Phone number"
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f610ec3a",
+   "id": "ecca0d32",
    "metadata": {},
    "outputs": [
     {
@@ -293,14 +293,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3915f5fc",
+   "metadata": {},
+   "source": [
+    "### Question5: Extracting HTML tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8a605458",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['<p>', '<b>', '</b>', \"<a href='https://example.com'>\", '</a>', '</p>']\n"
+     ]
+    }
+   ],
+   "source": [
+    "html_corpus = \"<p>This is a <b>sample</b> HTML <a href='https://example.com'>document</a>.</p>\"\n",
+    "\n",
+    "html_tag_pattern = r'<[^>]+>'\n",
+    "html_tags = re.findall(html_tag_pattern, html_corpus)\n",
+    "\n",
+    "print(html_tags)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a81444fb",
+   "id": "8a7b4ae1",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "### Question5: Extracting Numbers"
-   ]
+   "source": []
   }
  ],
  "metadata": {
