--- a/Regular Expression/cosine similarity.ipynb
+++ b/Regular Expression/cosine similarity.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7c116306",
+   "id": "4cfcb2d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "218e70b1",
+   "id": "70438ddc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d715af34",
+   "id": "760244c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "21cbe942",
+   "id": "e1c819dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,29 +48,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "9f0e01e9",
+   "execution_count": 8,
+   "id": "609d2ef8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cosine Similarity:\n",
-      "[[1.         0.40089186]\n",
+      "Cosine Similarity: [[1.         0.40089186]\n",
       " [0.40089186 1.        ]]\n"
      ]
     }
    ],
    "source": [
-    "print(\"Cosine Similarity:\")\n",
-    "print(cosine_sim)"
+    "print(\"Cosine Similarity:\",cosine_sim)\n"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "20e02200",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.         0.40089186]\n",
+      " [0.40089186 1.        ]]\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "703fb561",
+   "id": "b7f909e8",
    "metadata": {},
    "outputs": [],
    "source": []
