--- a/Language processing pipelines/Pipelines(Spacy).ipynb
+++ b/Language processing pipelines/Pipelines(Spacy).ipynb
@@ -161,7 +161,7 @@
      "text": [
       "Collecting en-core-web-sm==3.7.1\n",
       "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl (12.8 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0mm\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m869.1 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25hRequirement already satisfied: spacy<3.8.0,>=3.7.2 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from en-core-web-sm==3.7.1) (3.7.2)\n",
       "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (3.0.12)\n",
       "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (1.0.5)\n",
@@ -193,8 +193,6 @@
       "Requirement already satisfied: click<9.0.0,>=7.1.1 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from typer<0.10.0,>=0.3.0->spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (8.0.4)\n",
       "Requirement already satisfied: cloudpathlib<0.17.0,>=0.7.0 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from weasel<0.4.0,>=0.1.0->spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (0.16.0)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from jinja2->spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (2.1.1)\n",
-      "Installing collected packages: en-core-web-sm\n",
-      "Successfully installed en-core-web-sm-3.7.1\n",
       "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
       "You can now load the package via spacy.load('en_core_web_sm')\n"
      ]
@@ -223,13 +221,13 @@
     {
      "data": {
       "text/plain": [
-       "[('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x14a186930>),\n",
-       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x103387770>),\n",
-       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x14a1ad930>),\n",
+       "[('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x13737e570>),\n",
+       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x13762e030>),\n",
+       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x1374ae0a0>),\n",
        " ('attribute_ruler',\n",
-       "  <spacy.pipeline.attributeruler.AttributeRuler at 0x14a48f250>),\n",
-       " ('lemmatizer', <spacy.lang.en.lemmatizer.EnglishLemmatizer at 0x14a40a9d0>),\n",
-       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x14a1ae180>)]"
+       "  <spacy.pipeline.attributeruler.AttributeRuler at 0x13763f650>),\n",
+       " ('lemmatizer', <spacy.lang.en.lemmatizer.EnglishLemmatizer at 0x13763af10>),\n",
+       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x1374ae180>)]"
       ]
      },
      "execution_count": 9,
@@ -276,7 +274,8 @@
       "as | adposition | as\n",
       "a | determiner | a\n",
       "Data | proper noun | Data\n",
-      "Scientinst | proper noun | Scientinst\n"
+      "Scientinst | proper noun | Scientinst\n",
+      ". | punctuation | .\n"
      ]
     }
    ],
@@ -286,9 +285,255 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d32082be",
+   "metadata": {},
+   "source": [
+    "### Named Entity Recognition (NER)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c89f4a00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tesla Inc ORG\n",
+      "$45 billion MONEY\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc = nlp(\"Tesla Inc is going to acquire twitter for $45 billion\")\n",
+    "for ent in doc.ents:\n",
+    "    print(ent.text, ent.label_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c27951bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">\n",
+       "<mark class=\"entity\" style=\"background: #7aecec; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Tesla Inc\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">ORG</span>\n",
+       "</mark>\n",
+       " is going to acquire twitter for \n",
+       "<mark class=\"entity\" style=\"background: #e4e7d2; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    $45 billion\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">MONEY</span>\n",
+       "</mark>\n",
+       "</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from spacy import displacy\n",
+    "\n",
+    "displacy.render(doc, style=\"ent\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "927bc44b",
+   "metadata": {},
+   "source": [
+    "### Trained pipeline(French)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f2dc2375",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting fr-core-news-sm==3.7.0\n",
+      "  Downloading https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.7.0/fr_core_news_sm-3.7.0-py3-none-any.whl (16.3 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.3/16.3 MB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0mm\n",
+      "\u001b[?25hRequirement already satisfied: spacy<3.8.0,>=3.7.0 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from fr-core-news-sm==3.7.0) (3.7.2)\n",
+      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (3.0.12)\n",
+      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (1.0.5)\n",
+      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (1.0.10)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (2.0.8)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (3.0.9)\n",
+      "Requirement already satisfied: thinc<8.3.0,>=8.1.8 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (8.2.2)\n",
+      "Requirement already satisfied: wasabi<1.2.0,>=0.9.1 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (1.1.2)\n",
+      "Requirement already satisfied: srsly<3.0.0,>=2.4.3 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (2.4.8)\n",
+      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (2.0.10)\n",
+      "Requirement already satisfied: weasel<0.4.0,>=0.1.0 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (0.3.4)\n",
+      "Requirement already satisfied: typer<0.10.0,>=0.3.0 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (0.9.0)\n",
+      "Requirement already satisfied: smart-open<7.0.0,>=5.2.1 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (5.2.1)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (4.65.0)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (2.31.0)\n",
+      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (1.10.8)\n",
+      "Requirement already satisfied: jinja2 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (3.1.2)\n",
+      "Requirement already satisfied: setuptools in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (68.0.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (23.1)\n",
+      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (3.3.0)\n",
+      "Requirement already satisfied: numpy>=1.19.0 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (1.24.3)\n",
+      "Requirement already satisfied: typing-extensions>=4.2.0 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (4.7.1)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (3.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (1.26.16)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (2023.11.17)\n",
+      "Requirement already satisfied: blis<0.8.0,>=0.7.8 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from thinc<8.3.0,>=8.1.8->spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (0.7.11)\n",
+      "Requirement already satisfied: confection<1.0.0,>=0.0.1 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from thinc<8.3.0,>=8.1.8->spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (0.1.4)\n",
+      "Requirement already satisfied: click<9.0.0,>=7.1.1 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from typer<0.10.0,>=0.3.0->spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (8.0.4)\n",
+      "Requirement already satisfied: cloudpathlib<0.17.0,>=0.7.0 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from weasel<0.4.0,>=0.1.0->spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (0.16.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/raihan/anaconda3/lib/python3.11/site-packages (from jinja2->spacy<3.8.0,>=3.7.0->fr-core-news-sm==3.7.0) (2.1.1)\n",
+      "Installing collected packages: fr-core-news-sm\n",
+      "Successfully installed fr-core-news-sm-3.7.0\n",
+      "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
+      "You can now load the package via spacy.load('fr_core_news_sm')\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python -m spacy download fr_core_news_sm\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c234719a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.load(\"fr_core_news_sm\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "78890579",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tesla Inc  |  ORG  |  Companies, agencies, institutions, etc.\n",
+      "Twitter  |  MISC  |  Miscellaneous entities, e.g. events, nationalities, products or works of art\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc = nlp(\"Tesla Inc va racheter Twitter pour $45 milliards de dollars\")\n",
+    "for ent in doc.ents:\n",
+    "    print(ent.text, \" | \", ent.label_, \" | \", spacy.explain(ent.label_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ace2c87e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tesla  |  PROPN  |  Tesla\n",
+      "Inc  |  PROPN  |  Inc\n",
+      "va  |  VERB  |  aller\n",
+      "racheter  |  VERB  |  racheter\n",
+      "Twitter  |  VERB  |  twitter\n",
+      "pour  |  ADP  |  pour\n",
+      "$  |  NOUN  |  dollar\n",
+      "45  |  NUM  |  45\n",
+      "milliards  |  NOUN  |  milliard\n",
+      "de  |  ADP  |  de\n",
+      "dollars  |  NOUN  |  dollar\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc:\n",
+    "    print(token, \" | \", token.pos_, \" | \", token.lemma_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b33c63b7",
+   "metadata": {},
+   "source": [
+    "### Adding component in blank pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f5e455f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ner']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "source_nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "nlp = spacy.blank(\"en\")\n",
+    "nlp.add_pipe(\"ner\", source=source_nlp)\n",
+    "nlp.pipe_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b13b38ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tesla Inc ORG\n",
+      "$45 billion MONEY\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc = nlp(\"Tesla Inc is going to acquire twitter for $45 billion\")\n",
+    "for ent in doc.ents:\n",
+    "    print(ent.text, ent.label_)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff063f90",
+   "id": "0a7650eb",
    "metadata": {},
    "outputs": [],
    "source": []
