--- a/Language processing pipelines/Excercise.ipynb
+++ b/Language processing pipelines/Excercise.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "75ff6cb9",
+   "id": "c838ef94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cddb3f0a",
+   "id": "b2198cc0",
    "metadata": {},
    "source": [
     "### Excersie: 1\n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "120828dc",
+   "id": "ea6352dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b996745c",
+   "id": "a7b67bf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "384eac43",
+   "id": "f1db4e19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d7a6ace8",
+   "id": "9faf562f",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f9cf4f7",
+   "id": "ca85b9ef",
    "metadata": {},
    "source": [
     "### Excersie: 2\n",
@@ -93,8 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "00760c5f",
+   "execution_count": 23,
+   "id": "51c21ee1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,8 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "f20f17c1",
+   "execution_count": 24,
+   "id": "8a57cac7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,8 +114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "2b27df6e",
+   "execution_count": 25,
+   "id": "753efbc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,28 +124,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "bef5df78",
+   "execution_count": 26,
+   "id": "799e27bc",
    "metadata": {},
    "outputs": [],
    "source": [
     "for ent in doc.ents:\n",
-    "    if doc.ents == 'ORG':\n",
-    "        companies.append(ent.text)"
+    "    if ent.label_ == 'ORG':\n",
+    "        companies.append(ent)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "3706bf89",
+   "execution_count": 27,
+   "id": "73dbf10b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Companies:  []\n",
-      "Count:  0\n"
+      "Companies:  [Tesla, Walmart, Amazon, Microsoft, Google, Infosys, Reliance, HDFC Bank, Hindustan Unilever, Bharti]\n",
+      "Count:  10\n"
      ]
     }
    ],
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fdf2811",
+   "id": "5b3c1648",
    "metadata": {},
    "outputs": [],
    "source": []
