--- a/Stop Words/Excercise.ipynb
+++ b/Stop Words/Excercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "72c21417",
+   "id": "48f149d0",
    "metadata": {},
    "source": [
     "### Exercise 1: \n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7e7540a7",
+   "id": "b28aae4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "00e4edd0",
+   "id": "c3608c13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d2aefe59",
+   "id": "f2a931e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1226f1fe",
+   "id": "5826f497",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6d00c496",
+   "id": "aac5cde4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5deb59b6",
+   "id": "57638c61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ba9fc08e",
+   "id": "eff2030b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "76b40c59",
+   "id": "435379d9",
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ef6411a9",
+   "id": "2ca078b3",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "7e13bcf5",
+   "id": "6a100f91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "286e4fce",
+   "id": "2c7218df",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb755ba5",
+   "id": "af87a3d3",
    "metadata": {},
    "source": [
     "### Exercise 2:\n",
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0486adca",
+   "id": "4c9099a2",
    "metadata": {},
    "source": [
     "- Spacy default implementation considers \"not\" as a stop word. But in some scenarios removing 'not' will completely change the meaning of the statement/text. For Example, consider these two statements:\n",
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a0c65f30",
+   "id": "b9d13465",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1c5735ec",
+   "id": "a0ad0776",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "38335b00",
+   "id": "a2cc8c57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "65e9aad2",
+   "id": "f9cda077",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b9c0421",
+   "id": "015817da",
    "metadata": {},
    "source": [
     "### Exercise3:\n",
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "cd4d93b7",
+   "id": "0880ea74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "5228aa08",
+   "id": "99a82e9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,18 +325,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "6c3e5978",
+   "execution_count": 38,
+   "id": "6872ab33",
    "metadata": {},
    "outputs": [],
    "source": [
-    "non_stopwords = [token.text for token in doc if not token.is_stop and not token.is_punct]"
+    "remaining_tokens = []\n",
+    "for token in doc:\n",
+    "  if token.is_stop or token.is_punct:    #check whether a given token is stop word or punctuations\n",
+    "    continue\n",
+    "  remaining_tokens.append(token.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "661117fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frequency_tokens = {}\n",
+    "for token in remaining_tokens:\n",
+    "  if token != '\\n' and token != ' ':      #As spacy considers new line and empty spaces as seperate token, it's better to ignore them\n",
+    "    if token not in frequency_tokens:     #if a particular token occurs for the first time, we initialise it to 1\n",
+    "      frequency_tokens[token] = 1\n",
+    "    else:\n",
+    "      frequency_tokens[token] += 1        #if a partcular token is already present, then increment by 1 based on value already presented\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "4c746258",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_freq_word = max(frequency_tokens.keys(), key=(lambda key: frequency_tokens[key]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "9bc50fbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum frequency word: India\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Maximum frequency word: {max_freq_word}\") "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28d117d1",
+   "id": "026468d8",
    "metadata": {},
    "outputs": [],
    "source": []
