Add Excercise file

--- a/Text Representation/TF-IDF/TF-IDF.ipynb
+++ b/Text Representation/TF-IDF/TF-IDF.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1be1607b",
+   "id": "4a7c19d1",
    "metadata": {},
    "source": [
-    "### What is TF-IDF?\n",
+    "<h2 align='center'> Text Representation: TF-IDF</h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ddbefd0",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "- TF stands for **Term Frequency** and denotes the ratio of  number of times a particular word appeared in a Document to total number of words in the document.\n",
     "          \n",
@@ -31,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1f5888a7",
+   "id": "e96f45ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8861bae6",
+   "id": "1b6d074d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "16e286c3",
+   "id": "9a542065",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1ba41bf0",
+   "id": "ca9f63dd",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0f82281b",
+   "id": "1b8c8fa2",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "565a5e20",
+   "id": "57281bec",
    "metadata": {},
    "source": [
     "### Problem Statement: Given a description about a product sold on e-commerce website, classify it in one of the 4 categories\n",
@@ -204,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9dc27fff",
+   "id": "b4debcc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "83fce0b2",
+   "id": "6f24f199",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1324f0b4",
+   "id": "25cc7d0f",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "05a9b02a",
+   "id": "c71adfb7",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1c247234",
+   "id": "e2d31eb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7da13956",
+   "id": "1c10913d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "556fce4d",
+   "id": "bcfe3e88",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7909041e",
+   "id": "d90b7c81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "21491b7e",
+   "id": "aafd243d",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a7f310ef",
+   "id": "87aafc8f",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "04a16fd6",
+   "id": "605db1c2",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "981ea8ae",
+   "id": "412f2706",
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "55cabcaa",
+   "id": "68e55400",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd9ad520",
+   "id": "8dbafb4b",
    "metadata": {},
    "source": [
     "**Attempt 1** :\n",
@@ -599,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "12f224ba",
+   "id": "0b0c77f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "160bc1ee",
+   "id": "6e7c7ed2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "c68dbe7a",
+   "id": "07c108a1",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c5e54a47",
+   "id": "624b865e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "dfb82ea4",
+   "id": "692ff035",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "906f7c28",
+   "id": "59192620",
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "4e14ae09",
+   "id": "e2917d2a",
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "30c48d48",
+   "id": "e2951903",
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70f04284",
+   "id": "47f8d85c",
    "metadata": {},
    "source": [
     "**Attempt 2** :\n",
@@ -778,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "537f0c5d",
+   "id": "8f95ecbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "c5ac3947",
+   "id": "f840d469",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "dc7339b1",
+   "id": "f06a1128",
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "4c439d15",
+   "id": "56fc09a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "15b6d07a",
+   "id": "b44e11df",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cf3d34c",
+   "id": "39a2ab94",
    "metadata": {},
    "source": [
     "**Attempt 3** :\n",
@@ -879,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "1b3dfd2d",
+   "id": "2bba22b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "4a562cd2",
+   "id": "8b0f068e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "ff423f80",
+   "id": "9789fc53",
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "93a06de2",
+   "id": "fd9f94d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "7bcf4275",
+   "id": "f1ef033a",
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "3dd58579",
+   "id": "22b89540",
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "2a2aded2",
+   "id": "e84a70a8",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "aafc3d46",
+   "id": "74547eb6",
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e34bc78",
+   "id": "4683c834",
    "metadata": {},
    "source": [
     "<h3>Use text pre-processing to remove stop words, punctuations and apply lemmatization </h3>"
@@ -1048,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "d93865bb",
+   "id": "404a19ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "1f35f0bb",
+   "id": "c10397ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "82ae7a72",
+   "id": "e4b03178",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "ed6b69ab",
+   "id": "2ed5b19e",
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "f57c0aea",
+   "id": "c2f03e86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1189,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "52ce0c2b",
+   "id": "9f8ebe43",
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1223,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "291eef16",
+   "id": "acbaf625",
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e5a0dde",
+   "id": "498001be",
    "metadata": {},
    "source": [
     "**Build a model with pre processed text**"
@@ -1249,7 +1257,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "08afe6ca",
+   "id": "7a634a83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,7 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "acd0f3c5",
+   "id": "c2466980",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "7a9f4ab9",
+   "id": "d1bcc512",
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f91c6f46",
+   "id": "01ad5803",
    "metadata": {},
    "source": [
     "**Let's check the scores with our best model till now**\n",
@@ -1325,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "8efae591",
+   "id": "db250d91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,7 +1346,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "7278de1f",
+   "id": "5b87f306",
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "c16dd9ba",
+   "id": "0a170517",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1375,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "ff5a7bf5",
+   "id": "d1cc80ed",
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df3770c2",
+   "id": "2e3a761f",
    "metadata": {},
    "source": [
     "**Plot confusion matrix**"
@@ -1411,7 +1419,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "185f6410",
+   "id": "926918f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "e4cd4f79",
+   "id": "6b5effa3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1431,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "2f95cdb0",
+   "id": "3df47339",
    "metadata": {},
    "outputs": [
     {
@@ -1455,7 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "7614d15a",
+   "id": "77c974cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1466,7 +1474,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "a8f52f07",
+   "id": "53af49b0",
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29964fae",
+   "id": "bf292a07",
    "metadata": {},
    "outputs": [],
    "source": []
