--- a/Text Representation/TF-IDF/Excercise.ipynb
+++ b/Text Representation/TF-IDF/Excercise.ipynb
@@ -1208,6 +1208,32 @@
    "source": [
     "## **Please write down Final Observations**\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- As part of this exercise we have trained the data with algorithms like Multinomial Naive Bayes and Random Forest which are most used and provide good results for text related problems.\n",
+    "\n",
+    "- As Machine learning algorithms do not work on text data directly, we need to convert them into numeric vectors and feed that into models while training. For this purpose, we have used Bag of words(unigrams, bigrams, n-grams) and TF-IDF text representation techniques.\n",
+    "\n",
+    "**Key Findings**\n",
+    "- As the n_gram range keeps increasing, there's drastic fall of improvement in performance metrics.\n",
+    "\n",
+    "- There's seen a significant improvement in results before pre-processing and after pre-processing the data.\n",
+    "\n",
+    "- TF-IDF and Bag of words both performed equally well in performance metrics like Recall and F1-score.\n",
+    "\n",
+    "- Random Forest performed quite well when compared to Multinomial Naive Bayes.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
