--- a/Part Of Speach/Exercise.ipynb
+++ b/Part Of Speach/Exercise.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### Exercise 1\n",
     "\n",
-    "#### 1. Extract all NOUN tokens from this story. You will have to read the file in python first to collect all the text and then extract NOUNs in a python list\n",
+    "#### 1. Extract all NOUN tokens from this story.\n",
     "#### 2. Extract all numbers (NUM POS type) in a python list\n",
     "#### 3. Print a count of all POS tags in this story\n"
    ]
